// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Eye correctly 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-secondary"
    onClick={[Function]}
    type="button"
  >
    Eye Color
  </button>
  <div
    aria-hidden={true}
    className="dropdown-menu"
    role="menu"
    tabIndex="-1"
    x-placement={undefined}
  >
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Blue
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Red
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Green
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Black
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Yellow
    </button>
  </div>
</div>
`;

exports[`renders Skin correctly 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-secondary"
    onClick={[Function]}
    type="button"
  >
    Skin Color
  </button>
  <div
    aria-hidden={true}
    className="dropdown-menu"
    role="menu"
    tabIndex="-1"
    x-placement={undefined}
  >
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Blue
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Red
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Green
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Black
    </button>
    <button
      className="dropdown-item"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      Yellow
    </button>
  </div>
</div>
`;
